/categories/:id/count added + swagger docs
